# cdk-drive-updater

./: .env.example  .gitignore  Cargo.toml  FUNCTIONALITY.md  README.md
.copilot/instructions/: documentation.instructions.md
.kilo/agent/: documentation.md
openspec/: AGENTS.md
openspec/changes/document-readme-and-functionality/: design.md  proposal.md  tasks.md
openspec/changes/document-readme-and-functionality/specs/documentation-maintenance-rules/: spec.md
openspec/changes/document-readme-and-functionality/specs/functionality-documentation/: spec.md
openspec/changes/document-readme-and-functionality/specs/readme-documentation/: spec.md
openspec/changes/rust-cdk-drive-component-updater/specs/query-update-modes/: spec.md
openspec/changes/rust-cdk-drive-component-updater/specs/test-organisation/: spec.md
resources/src/: logo.psd
scripts/: build-release.ps1
src/: app_logging.rs  cdk_info.rs  installed.rs  main.rs  utils.rs
src/tests/: installed_tests.rs  main_tests.rs
