[package]
name = "cdk-drive-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy = "0.15"
fern = "0.7"
log = "0.4"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
scraper = "0.26.0"
version-compare = "0.2"
winreg = "0.56.0"
