[package]
name = "cdk-drive-updater"
version = "1.2.0"
edition = "2024"
authors = ["Tyler Morrison"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy = "0.15"
fern = "0.7"
log = "0.4"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "rustls"] }
scraper = "0.27.0"
version-compare = "0.2"
walkdir = "2.5"
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }
winreg = "0.56.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
